example/advanced/hostnames-matchtype/18-gw-wildcard-route-empty-match-prefix/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hug-gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 31081
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
  - name: https
    protocol: HTTPS
    port: 31444
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: offload
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
